<resources>
    <string name="app_name">Sainyojit</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_title">Sign in to Sainyojit!🎉</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="internet_not_available">Please check your internet connection and try again</string>
    <string name="request_login_credentials">Request login credentials</string>
    <string name="back_to_login">Back to Login</string>
    <string name="not_a_user_sign_up">Not a user? Sign Up</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="assignee">Assignee</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="submit">Submit</string>
    <string name="emoji_tired">😮‍💨</string>
    <string name="logout">Logout</string>
    <string-array name="priorities">
        <item>Lowest</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>

</resources>