<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_title"
                    style="@style/Theme.Sainyojit.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_assignee"
                    style="@style/Theme.Sainyojit.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/assignee"
                    app:boxBackgroundMode="outline"
                    app:endIconDrawable="@drawable/ic_baseline_search_24"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_assignee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_description"
                    style="@style/Theme.Sainyojit.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_start"
                    style="@style/Theme.Sainyojit.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:required="true"
                    app:boxBackgroundMode="outline"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_due"
                    style="@style/Theme.Sainyojit.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/due_date"
                    app:boxBackgroundMode="outline"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_due"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_priority"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priority"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/edit_priority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/Theme.Sainyojit.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>